--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+src/stellar_spectra/input_data_std/
+src/vulcan_configs/configs/
+src/vulcan_configs/output/
