--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@ tqdm~=4.62.3
 h5py~=3.4.0
 astropy~=4.3.1
 petitradtrans~=2.3.2
+imageio~=2.10.5
+psutil
+scipy
+matplotlib
+ipython
+jupyter
+pandas
+sympy
+nose
