* exclude runs from git

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ dmypy.json
 src/stellar_spectra/input_data_std/
 src/stellar_spectra/output/
 src/vulcan_configs/configs/
+src/neural_nets/runs/
 .idea
 
 data
