* add saved models

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ src/stellar_spectra/input_data_std/
 src/stellar_spectra/output/
 src/vulcan_configs/configs/
 src/neural_nets/runs/
+src/neural_nets/saved_models/
 .idea
 
 data
